--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: "" # the base hostname & protocol for your site
 
 twitter_username: TempleYDSA
 facebook_username: TUYDSA
+instagram_username: temple_ydsa
 
 # Build settings
 markdown: kramdown
